--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -10,6 +10,14 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
+    <ListView
+        android:id="@+id/lvPuntuacions"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/btJugar"/>
+
     <Button
         android:id="@+id/btJugar"
         android:layout_width="wrap_content"
