--- a/app/src/main/res/layout/activity_partida.xml
+++ b/app/src/main/res/layout/activity_partida.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/black"
     android:orientation="vertical">
     <include
         android:id="@+id/toolbar"
@@ -13,8 +11,9 @@
 
     <RelativeLayout
         android:id="@+id/rl01"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="1">
 
         <GridView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/gridView"
@@ -24,71 +23,72 @@
             android:stretchMode="columnWidth"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             >
         </GridView>
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/rl02"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:layout_alignBottom="@+id/gridView">
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_weight="0.5">
 
-    <Button
-        android:id="@+id/btOne"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="1"/>
-    <Button
-        android:id="@+id/btTwo"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="2"
-        android:layout_toRightOf="@+id/btOne"/>
-    <Button
-        android:id="@+id/btThree"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="3"
-        android:layout_toRightOf="@+id/btTwo"/>
-    <Button
-        android:id="@+id/btFour"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="4"
-        android:layout_toRightOf="@+id/btThree"/>
-    <Button
-        android:id="@+id/btFive"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="5"
-        android:layout_toRightOf="@+id/btFour"/>
-    <Button
-        android:id="@+id/btSix"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="6"
-        android:layout_below="@+id/btOne"/>
-    <Button
-        android:id="@+id/btSeven"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="7"
-        android:layout_toRightOf="@+id/btSix"
-        android:layout_alignBaseline="@+id/btSix"/>
-    <Button
-        android:id="@+id/btEight"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="8"
-        android:layout_toRightOf="@+id/btSeven"
-        android:layout_alignBaseline="@+id/btSix"/>
-    <Button
-        android:id="@+id/btNine"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="9"
-        android:layout_toRightOf="@+id/btEight"
-        android:layout_alignBaseline="@+id/btSix"/>
+        <Button
+            android:id="@+id/btOne"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/_1"/>
+        <Button
+            android:id="@+id/btTwo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/_2"
+            android:layout_toEndOf="@+id/btOne"/>
+        <Button
+            android:id="@+id/btThree"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/_3"
+            android:layout_toEndOf="@+id/btTwo"/>
+        <Button
+            android:id="@+id/btFour"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/_4"
+            android:layout_toEndOf="@+id/btThree"/>
+        <Button
+            android:id="@+id/btFive"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/_5"
+            android:layout_toEndOf="@+id/btFour"/>
+        <Button
+            android:id="@+id/btSix"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/_6"
+            android:layout_below="@+id/btOne"/>
+        <Button
+            android:id="@+id/btSeven"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/_7"
+            android:layout_toEndOf="@+id/btSix"
+            android:layout_alignBaseline="@+id/btSix"/>
+        <Button
+            android:id="@+id/btEight"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/_8"
+            android:layout_toEndOf="@+id/btSeven"
+            android:layout_alignBaseline="@+id/btSix"/>
+        <Button
+            android:id="@+id/btNine"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/_9"
+            android:layout_toEndOf="@+id/btEight"
+            android:layout_alignBaseline="@+id/btSix"/>
 
     </RelativeLayout>
 </LinearLayout>
